--- a/Illumina_QC/06-QC_exercises.Rmd
+++ b/Illumina_QC/06-QC_exercises.Rmd
@@ -1,4 +1,4 @@
-# QC exercises
+# QC exercises {#qcexercise}
 ```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
 knitr::include_graphics(path = "figures/exercise.png", auto_pdf = TRUE)
 ```
