--- a/long_read_qc/04-ONT_setup.Rmd
+++ b/long_read_qc/04-ONT_setup.Rmd
@@ -1,4 +1,4 @@
-# ONT Setup
+# ONT Setup {#ontsetupchap}
 ```{r, fig.align = 'center',out.width= '10%', echo=FALSE }
 knitr::include_graphics(path = "figures/conda.png", auto_pdf = TRUE)
 ```
