--- a/long_read_qc/06-Porechop.Rmd
+++ b/long_read_qc/06-Porechop.Rmd
@@ -1,4 +1,4 @@
-# Porechop
+# Porechop {#porechopchap}
 ```{r, fig.align = 'center',out.width= '60%', echo=FALSE }
 knitr::include_graphics(path = "figures/porechop_logo_knife.png", auto_pdf = TRUE)
 ``` 
