--- a/long_read_qc/07-NanoPlot.Rmd
+++ b/long_read_qc/07-NanoPlot.Rmd
@@ -1,4 +1,4 @@
-# NanoPlot
+# NanoPlot {#nanoplotchap}
 ```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
 knitr::include_graphics(path = "figures/nanoplot_hexes.png", auto_pdf = TRUE)
 ``` 
