--- a/long_read_qc/08-NanoFilt.Rmd
+++ b/long_read_qc/08-NanoFilt.Rmd
@@ -1,4 +1,4 @@
-# NanoFilt
+# NanoFilt {#nanofiltchap}
 ```{r, fig.align = 'center',out.width= '10%', echo=FALSE }
 knitr::include_graphics(path = "figures/quality_filtering.png", auto_pdf = TRUE)
 ```
