--- a/long_read_qc/09-ONT_final_check.Rmd
+++ b/long_read_qc/09-ONT_final_check.Rmd
@@ -1,4 +1,4 @@
-# Final check
+# Final check {#ontcheckchap}
 ```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
 knitr::include_graphics(path = "figures/finish.png", auto_pdf = TRUE)
 ```
