--- a/Illumina_QC/03-Setup.Rmd
+++ b/Illumina_QC/03-Setup.Rmd
@@ -1,4 +1,4 @@
-# Setup
+# Setup {#setupchap}
 ```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
 knitr::include_graphics(path = "figures/start.png", auto_pdf = TRUE)
 ```
