--- a/long_read_qc/01-Long_read_QC.Rmd
+++ b/long_read_qc/01-Long_read_QC.Rmd
@@ -39,8 +39,67 @@ knitr::include_graphics(path = "figures/NEOF.png", auto_pdf = TRUE)
 knitr::include_graphics(path = "figures/well.png", auto_pdf = TRUE)
 ``` 
 
-This practical session aims to introduce you to Long read Quality Control. The topics covered are:
+This practical session aims to introduce you to Long read Quality Control. 
 
+## Table of contents {-}
+
+```{r, echo=FALSE, align="centre"}
+#Create 2 column dataframe
+column_1 <- c(
+  #1 Data intro
+  '[**Data intro**](#data)', 
+ '[![](figures/Play.png){height="150"}](#data)',
+ #3 ONT setup
+    '[**ONT setup**](#ontsetupchap)', 
+ '[![](figures/conda.png){height="150"}](#ontsetupchap)',
+ #5 Nanoplot
+   '[**NanoPlot**](#nanoplotchap)', 
+ '[![](figures/nanoplot_hexes.png){height="150"}](#nanoplotchap)',
+ #7 ONT final check
+   '[**ONT final check**](#ontcheckchap)', 
+ '[![](figures/finish.png){height="150"}](#ontcheckchap)',
+  #9 CLR setup
+   '[**CLR setup**](#clrsetupchap)', 
+ '[![](figures/clr.png){height="100"}](#clrsetupchap)',
+   #11 CLR filter
+   '[**CLR filtering**](#clrfiltchap)', 
+ '[![](figures/quality_filtering.png){height="150"}](#clrfiltchap)',
+    #13 appendix
+   '[**Appendix**](#mamba_install)', 
+ '[![](figures/mamba_logo.png){height="150"}](#mamba_install)'
+)
+column_2 <- c(
+  #2 ONT
+  '[**ONT background**](#ont)', 
+ '[![](figures/ONT_logo_wo_text.png){height="150"}](#ont)',
+ #4 porechop
+   '[**Porechop**](#porechopchap)', 
+ '[![](figures/porechop_logo_knife.png){height="100"}](#porechopchap)',
+ #6 nanofilt
+   '[**NanoFilt**](#nanofiltchap)', 
+ '[![](figures/quality_filtering.png){height="150"}](#nanofiltchap)',
+ #8 pb background
+   '[**PacBio background**](#pb)', 
+ '[![](figures/Pacbio_logo_wo_text.png){height="150"}](#pb)',
+   #10 CLR qc
+   '[**CLR QC**](#clrqcchap)', 
+ '[![](figures/qc_inspection.png){height="150"}](#clrqcchap)',
+    #12 CCS
+   '[**CLR QC**](#ccschap)', 
+ '[![](figures/ccs.png){height="150"}](#ccschap)',
+ #14 empty
+ "",""
+)
+table_df <- data.frame(column_1, column_2)
+#Kable and kableextra libraries
+library(knitr)
+library(kableExtra)
+#Create table
+#ALign both column in centre (align = "cc")
+table_df %>%
+  kbl(align= "cc", col.names = NULL) %>%
+  kable_styling(position = "center")
+```
 - [Acquiring the workshop data](#data)
 - [ONT quality control](#ont)
 - [PacBio quality control](#pb)
