--- a/long_read_qc/12-PB_CLR_QC.Rmd
+++ b/long_read_qc/12-PB_CLR_QC.Rmd
@@ -1,4 +1,4 @@
-# CLR QC
+# CLR QC {#clrqcchap}
 ```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
 knitr::include_graphics(path = "figures/qc_inspection.png", auto_pdf = TRUE)
 ``` 
