--- a/Illumina_QC/Illumina Quality Control.Rmd
+++ b/Illumina_QC/Illumina Quality Control.Rmd
@@ -38,6 +38,14 @@ knitr::write_bib(c(
 ), 'packages.bib')
 ```
 
+```{r, echo=FALSE}
+#Change colour, border, and text of code chunks
+#Check style.css for .Rchunk
+#https://stackoverflow.com/questions/65627531/change-r-chunk-background-color-in-bookdown-gitbook
+#https://bookdown.org/yihui/rmarkdown-cookbook/chunk-styling.html
+knitr::opts_chunk$set(class.source="Rchunk") 
+```
+
 ```{r, fig.align = 'center',out.width= '30%', echo=FALSE }
 knitr::include_graphics(path = "figures/NEOF.png", auto_pdf = TRUE)
 ``` 
@@ -984,16 +992,18 @@ __Data Preprocessing:__ https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user
 knitr::include_graphics(path = "figures/mamba_logo.png", auto_pdf = TRUE)
 ```
 
-## Mamba installation {#mamba_install}
+## Mamba installation and environment {#mamba_install}
 
-Mamba is a reimplementation of conda.
-It is a great tool for installing bioinformatic packages including R packages.
+Mamba is a reimplementation of conda. It is a great tool for installing bioinformatic packages including R packages.
 
-Mamba github: https://github.com/mamba-org/mamba
+Mamba github: <https://github.com/mamba-org/mamba>
 
-Mamba installation: https://github.com/conda-forge/miniforge#mambaforge
+The best way to use Mamba is to install Miniforge. It has both Conda and Mamba commands.
 
-Mamba guide: https://mamba.readthedocs.io/en/latest/user_guide/mamba.html
+Miniforge installation: <https://github.com/conda-forge/miniforge>
+
+Mamba guide: <https://mamba.readthedocs.io/en/latest/user_guide/mamba.html>
+
 
 ## Illumina QC environment
 To create the mamba environment `illumina_qc` run the below commands in your bash. You will need to have installed `mamba` first.
