--- a/long_read_qc/Long read Quality Control.Rmd
+++ b/long_read_qc/Long read Quality Control.Rmd
@@ -47,6 +47,14 @@ knitr::write_bib(c(
 #download_ionicons()
 ```
 
+```{r, echo=FALSE}
+#Change colour, border, and text of code chunks
+#Check style.css for .Rchunk
+#https://stackoverflow.com/questions/65627531/change-r-chunk-background-color-in-bookdown-gitbook
+#https://bookdown.org/yihui/rmarkdown-cookbook/chunk-styling.html
+knitr::opts_chunk$set(class.source="Rchunk") 
+```
+
 ```{r, fig.align = 'center',out.width= '30%', echo=FALSE }
 knitr::include_graphics(path = "figures/NEOF.png", auto_pdf = TRUE)
 ``` 
@@ -1491,16 +1499,17 @@ knitr::knit_hooks$set(webex.hide = function(before, options, envir) {
 knitr::include_graphics(path = "figures/mamba_logo.png", auto_pdf = TRUE)
 ```
 
-## Mamba installation 
+## Mamba installation {#mamba_install}
 
-Mamba is a reimplementation of conda.
-It is a great tool for installing bioinformatic packages including R packages.
+Mamba is a reimplementation of conda. It is a great tool for installing bioinformatic packages including R packages.
 
-Mamba github: https://github.com/mamba-org/mamba
+Mamba github: <https://github.com/mamba-org/mamba>
 
-Mamba installation: https://github.com/conda-forge/miniforge#mambaforge
+The best way to use Mamba is to install Miniforge. It has both Conda and Mamba commands.
 
-Mamba guide: https://mamba.readthedocs.io/en/latest/user_guide/mamba.html
+Miniforge installation: <https://github.com/conda-forge/miniforge>
+
+Mamba guide: <https://mamba.readthedocs.io/en/latest/user_guide/mamba.html>
 
 ## ONT QC environment
 To create the mamba environment `ont_qc` run the below commands in your bash. You will need to have installed `mamba` first.
